Fixed some intellij warnings