@@ -3,7 +3,6 @@ package com.task.backtask.controller;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.task.backtask.entity.DigitInterval;
 import com.task.backtask.entity.LetterInterval;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -14,8 +13,8 @@ import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
@@ -30,7 +29,7 @@ class IntervalControllerTest {
 
     @Test
     void mergeDigitsAndFindMinTest() throws Exception {
-        var request = Arrays.asList(
+        var request = List.of(
                 Arrays.asList(1, 4),
                 Arrays.asList(3, 6),
                 Arrays.asList(8, 10)
@@ -63,7 +62,7 @@ class IntervalControllerTest {
 
     @Test
     void mergeLettersAndFindMinTest() throws Exception {
-        var request = Arrays.asList(
+        var request = List.of(
                 Arrays.asList("a", "f"),
                 Arrays.asList("d", "j"),
                 Arrays.asList("r", "z")
@@ -96,9 +95,7 @@ class IntervalControllerTest {
 
     @Test
     void mergeIllegalKindTest() throws Exception {
-        var request = Arrays.asList(
-                Arrays.asList("a", "f")
-        );
+        var request = List.of(Arrays.asList("a", "f"));
 
         mockMvc.perform(post("/api/v1/intervals/merge")
                         .contentType("application/json")
